--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "outDir": "./dist",
     "allowJs": false,
     "target": "es5",
-    "declaration": true
+    "declaration": true,
+    "module": "commonjs",
+    "moduleResolution": "node"
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"]
 }
