--- a/package.json
+++ b/package.json
@@ -35,44 +35,45 @@
     "docs": "jsdoc -c jsdoc.conf.json"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/preset-react": "^7.18.6",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "acorn": "^8.8.0",
-    "babel-loader": "^8.2.5",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@types/jest": "^29.5.3",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "acorn": "^8.10.0",
+    "babel-loader": "^9.1.3",
     "babel-plugin-react-scoped-css": "^1.1.1",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.20.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-prettier": "^5.0.0",
     "file-loader": "^6.2.0",
     "install": "^0.13.0",
-    "jest": "^27.5.1",
-    "jsdoc": "^3.6.11",
-    "mini-css-extract-plugin": "^2.6.1",
-    "node-sass": "^6.0.1",
-    "npm": "^8.15.1",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "resolve-url-loader": "^4.0.0",
-    "sass": "^1.54.0",
-    "sass-loader": "^12.6.0",
+    "jest": "^29.6.2",
+    "jsdoc": "^4.0.2",
+    "mini-css-extract-plugin": "^2.7.6",
+    "npm": "^9.8.1",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.64.1",
+    "sass-loader": "^13.3.2",
     "scoped-css-loader": "^1.0.0",
-    "source-map-loader": "^3.0.1",
+    "source-map-loader": "^4.0.1",
     "standard-version": "^9.5.0",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.3",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
+    "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.9",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
     "url-loader": "^4.1.1",
-    "webpack": "^5.74.0",
+    "webpack": "^5.88.2",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.15.1"
   }
 }
